--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatum quibusdam explicabo debitis sapiente perferendis molestias quidem est voluptas dolore. Ullam iure repellendus laudantium voluptatibus qui optio, aperiam dignissimos pariatur.</p>
                     </div>
                     <div class="project-img">
-                        <img src="/image/projects.jpg" alt="img">
+                        <img src="./image/projects.jpg" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
