--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatum quibusdam explicabo debitis sapiente perferendis molestias quidem est voluptas dolore. Ullam iure repellendus laudantium voluptatibus qui optio, aperiam dignissimos pariatur.</p>
                     </div>
                     <div class="project-img">
-                        <img src="https://cdn.pixabay.com/photo/2016/03/27/20/00/coffee-1284041_960_720.jpg" alt="img">
+                        <img src="./image/projects.jpg" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -116,7 +116,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatum quibusdam explicabo debitis sapiente perferendis molestias quidem est voluptas dolore. Ullam iure repellendus laudantium voluptatibus qui optio, aperiam dignissimos pariatur.</p>
                     </div>
                     <div class="project-img">
-                        <img src="/image/projects.jpg" alt="img">
+                        <img src="./image/projects.jpg" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
@@ -126,7 +126,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatum quibusdam explicabo debitis sapiente perferendis molestias quidem est voluptas dolore. Ullam iure repellendus laudantium voluptatibus qui optio, aperiam dignissimos pariatur.</p>
                     </div>
                     <div class="project-img">
-                        <img src="/image/projects.jpg" alt="img">
+                        <img src="./image/projects.jpg" alt="img">
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
         <div class="about container">
             <div class="col-left">
                 <div class="about-img">
-                    <img src="/image/me3.jpg" alt="img">
+                    <img src="./image/me3.jpg" alt="img">
                 </div>
             </div>
             <div class="col-right">
